--- a/src/styles/_estimator.scss
+++ b/src/styles/_estimator.scss
@@ -1,62 +1,60 @@
 
-$img1: url("../../img/Assets/Landing Page/Step-1/iOS_white.png");
-$img2: url("../../img/Assets/Landing Page/Step-1/Android_white.png");
-$img3: url("../../img/Assets/Landing Page/Step-1/Windows_white.png");
-$img4: url("../../img/Assets/Landing Page/Step-1/Blackberry_white.png");
-$img5: url("../../img/Assets/Landing Page/Step-1/Web_white.png");
-$img6: url("../../img/Assets/Landing Page/Step-2/small_white.png");
-$img7: url("../../img/Assets/Landing Page/Step-2/Medium_white.png");
-$img8: url("../../img/Assets/Landing Page/Step-2/Large_white.png");
-$img9: url("../../img/Assets/Landing Page/Step-3/n_a_white.png");
-$img10: url("../../img/Assets/Landing Page/Step-3/Standard_white.png");
-$img11: url("../../img/Assets/Landing Page/Step-3/Social_white.png");
-$img12: url("../../img/Assets/Landing Page/Step-3/Enterprise_white.png");
-$img13: url("../../img/Assets/Landing Page/Step-4/n_a_white.png");
-$img14: url("../../img/Assets/Landing Page/Step-4/data_white.png");
-$img15: url("../../img/Assets/Landing Page/Step-4/Large-Files_white.png");
-$img16: url("../../img/Assets/Landing Page/Step-5/no_white.png");
-$img17: url("../../img/Assets/Landing Page/Step-5/simple_white.png");
-$img18: url("../../img/Assets/Landing Page/Step-5/Advanced_white.png");
-$img19: url("../../img/Assets/Landing Page/Step-6/no_white.png");
-$img20: url("../../img/Assets/Landing Page/Step-6/simple_white.png");
-$img21: url("../../img/Assets/Landing Page/Step-6/Advanced_white.png");
-$img22: url("../../img/Assets/Landing Page/Step-7/no_white.png");
-$img23: url("../../img/Assets/Landing Page/Step-7/simple_white.png");
-$img24: url("../../img/Assets/Landing Page/Step-7/Advanced_white.png");
-$img25: url("../../img/Assets/Landing Page/Step-8/n_a_white.png");
-$img26: url("../../img/Assets/Landing Page/Step-8/Push_SMS_Email_white.png");
-$img27: url("../../img/Assets/Landing Page/Step-8/Advanced_social_white.png");
-$img28: url("../../img/Assets/Landing Page/Step-9/mvp_white.png");
-$img29: url("../../img/Assets/Landing Page/Step-9/Polished_white.png");
-$img30: url("../../img/Assets/Landing Page/Step-10/n_a_white.png");
-$img31: url("../../img/Assets/Landing Page/Step-10/Complete_white.png");
-$img32: url("../../img/Assets/Landing Page/Step-11/none_white.png");
-$img33: url("../../img/Assets/Landing Page/Step-11/Minimal_white.png");
-$img34: url("../../img/Assets/Landing Page/Step-11/Everything_white.png");
-$img35: url("../../img/Assets/Landing Page/Step-12/not_important_white.png");
-$img36: url("../../img/Assets/Landing Page/Step-12/important_white.png");
-$img37: url("../../img/Assets/Landing Page/Step-13/not_important_white.png");
-$img38: url("../../img/Assets/Landing Page/Step-13/important_white.png");
-$img39: url("../../img/Assets/Landing Page/Step-14/No_major_backend_logic_white.png");
-$img40: url("../../img/Assets/Landing Page/Step-14/with_ready_service_white.png");
-$img41: url("../../img/Assets/Landing Page/Step-14/not_service_enabled_white.png");
-$img42: url("../../img/Assets/Landing Page/Step-14/needs_to_be_created_white.png");
-$img43: url("../../img/Assets/Landing Page/Step-15/Not_Required_white.png");
-$img44: url("../../img/Assets/Landing Page/Step-15/Required_white.png");
+$img1: url("../../img/Assets/Landing-Page/Step-1/iOS_white.png");
+$img2: url("../../img/Assets/Landing-Page/Step-1/Android_white.png");
+$img3: url("../../img/Assets/Landing-Page/Step-1/Windows_white.png");
+$img4: url("../../img/Assets/Landing-Page/Step-1/Blackberry_white.png");
+$img5: url("../../img/Assets/Landing-Page/Step-1/Web_white.png");
+$img6: url("../../img/Assets/Landing-Page/Step-2/small_white.png");
+$img7: url("../../img/Assets/Landing-Page/Step-2/Medium_white.png");
+$img8: url("../../img/Assets/Landing-Page/Step-2/Large_white.png");
+$img9: url("../../img/Assets/Landing-Page/Step-3/n_a_white.png");
+$img10: url("../../img/Assets/Landing-Page/Step-3/Standard_white.png");
+$img11: url("../../img/Assets/Landing-Page/Step-3/Social_white.png");
+$img12: url("../../img/Assets/Landing-Page/Step-3/Enterprise_white.png");
+$img13: url("../../img/Assets/Landing-Page/Step-4/n_a_white.png");
+$img14: url("../../img/Assets/Landing-Page/Step-4/data_white.png");
+$img15: url("../../img/Assets/Landing-Page/Step-4/Large-Files_white.png");
+$img16: url("../../img/Assets/Landing-Page/Step-5/no_white.png");
+$img17: url("../../img/Assets/Landing-Page/Step-5/simple_white.png");
+$img18: url("../../img/Assets/Landing-Page/Step-5/Advanced_white.png");
+$img19: url("../../img/Assets/Landing-Page/Step-6/no_white.png");
+$img20: url("../../img/Assets/Landing-Page/Step-6/simple_white.png");
+$img21: url("../../img/Assets/Landing-Page/Step-6/Advanced_white.png");
+$img22: url("../../img/Assets/Landing-Page/Step-7/no_white.png");
+$img23: url("../../img/Assets/Landing-Page/Step-7/simple_white.png");
+$img24: url("../../img/Assets/Landing-Page/Step-7/Advanced_white.png");
+$img25: url("../../img/Assets/Landing-Page/Step-8/n_a_white.png");
+$img26: url("../../img/Assets/Landing-Page/Step-8/Push_SMS_Email_white.png");
+$img27: url("../../img/Assets/Landing-Page/Step-8/Advanced_social_white.png");
+$img28: url("../../img/Assets/Landing-Page/Step-9/mvp_white.png");
+$img29: url("../../img/Assets/Landing-Page/Step-9/Polished_white.png");
+$img30: url("../../img/Assets/Landing-Page/Step-10/n_a_white.png");
+$img31: url("../../img/Assets/Landing-Page/Step-10/Complete_white.png");
+$img32: url("../../img/Assets/Landing-Page/Step-11/none_white.png");
+$img33: url("../../img/Assets/Landing-Page/Step-11/Minimal_white.png");
+$img34: url("../../img/Assets/Landing-Page/Step-11/Everything_white.png");
+$img35: url("../../img/Assets/Landing-Page/Step-12/not_important_white.png");
+$img36: url("../../img/Assets/Landing-Page/Step-12/important_white.png");
+$img37: url("../../img/Assets/Landing-Page/Step-13/not_important_white.png");
+$img38: url("../../img/Assets/Landing-Page/Step-13/important_white.png");
+$img39: url("../../img/Assets/Landing-Page/Step-14/No_major_backend_logic_white.png");
+$img40: url("../../img/Assets/Landing-Page/Step-14/with_ready_service_white.png");
+$img41: url("../../img/Assets/Landing-Page/Step-14/not_service_enabled_white.png");
+$img42: url("../../img/Assets/Landing-Page/Step-14/needs_to_be_created_white.png");
+$img43: url("../../img/Assets/Landing-Page/Step-15/Not_Required_white.png");
+$img44: url("../../img/Assets/Landing-Page/Step-15/Required_white.png");
 $padding-5-items: 0 10% 0 10%;
 $padding-4-items: 0 20% 0 20%;
 $padding-3-items: 0 25% 0 25%;
 $padding-2-items: 0 35% 0 35%;
 
 .top-header {
-  border-top: 1px solid rgba(0,0,0,0.1);
-  color : #7E7E7E;
-  background-color: #012938;
+  background-color: #0c232c;
   padding: 2%;
 }
 
 .start{
-   background-image: url("../../img/Assets/Landing Page/Header/banner_bg.png");
+   background-image: url("../../img/Assets/Landing-Page/Header/banner_bg.png");
    background-size: cover;
    height: 500px;
    width: 100%;
@@ -84,6 +82,45 @@ $padding-2-items: 0 35% 0 35%;
    border-left: 100px solid transparent; 
    border-right:100px solid transparent;
 }
+.kwadrat2
+{ 
+  width: 232px; 
+  height: 170px; 
+  border-top: 1px solid #fff; 
+  overflow: hidden; 
+  margin-top: 5px; 
+}
+
+.trojkat2
+{
+  position: relative;
+  overflow: hidden;
+  transform: rotate(45deg) skew(10deg,10deg);
+  border-bottom: 1px solid #fff;
+  border-right: 1px solid #fff;
+  width: 200px;
+  height: 200px;
+  margin:-100px 0 0 16px;
+  background: white;
+  background-size: 29% 44%;
+  background-repeat: no-repeat;
+  background-position: center center;
+
+}
+.trojkat_bg2
+{
+  position: absolute;
+  width: 200%;
+  height: 200%;
+  top: -50%;
+  left: -50%;
+  z-index: -1;
+  background: url("../../img/Assets/Landing-Page/Header/android_logo.png");
+  background-size: 100%;
+  background-position: center top;
+  transform: skew(-10deg,-10deg) rotate(-45deg) ;
+  transition: .3s;
+} 
 
 .triangle-down {
    width: 0; 
@@ -91,7 +128,14 @@ $padding-2-items: 0 35% 0 35%;
    border-top: 160px solid white; 
    border-left: 100px solid transparent; 
    border-right: 100px solid transparent; 
+   .img-style{
+     position: absolute;
+     top: 65%;
+     left: 10%;
+  }
 }
+
+
 
  p{
     padding-top: 0px;
@@ -124,6 +168,7 @@ $padding-2-items: 0 35% 0 35%;
       position: relative;
       background-color: #f6f6f6;
       border: 8px solid #E6E6E6;
+      cursor: pointer;
       .imgclass{
          transform: rotate(-45deg);
          -ms-transform: rotate(-45deg);
@@ -139,6 +184,21 @@ $padding-2-items: 0 35% 0 35%;
    }
    //
 }
+
+@mixin select($imgurl){
+      .imagecontainer{
+      border-color:  #F58031 !important;
+      background-color: #012938 !important;
+      }
+      
+}
+
+
+
+.select-1{
+  @include select($img1);
+}
+
 
 @mixin padding($padding-items)
 {
@@ -313,12 +373,15 @@ h2 {
 
 .bottom-footer {
   border-top: 1px solid rgba(0,0,0,0.1);
-  color : #7E7E7E;
-  background-color: #012938;
+  color : #99a5aa;
+  background-color: #0c232c;
+  padding: 1%;
 }
 
 .hi-footerfont {
-  font-family: 'Open Sans', sans-serif;
+  font-family: Lato;
+  font-size: 16px;
+  font-style: Regular;
   text-align: center;
 }
 
