--- a/src/styles/_estimator.scss
+++ b/src/styles/_estimator.scss
@@ -1,51 +1,3 @@
-$img1: url("../../img/Assets/Landing-Page/Step-1/iOS_white.png");
-$img2: url("../../img/Assets/Landing-Page/Step-1/Android_white.png");
-$img3: url("../../img/Assets/Landing-Page/Step-1/Windows_white.png");
-$img4: url("../../img/Assets/Landing-Page/Step-1/Blackberry_white.png");
-$img5: url("../../img/Assets/Landing-Page/Step-1/Web_white.png");
-$img6: url("../../img/Assets/Landing-Page/Step-2/small_white.png");
-$img7: url("../../img/Assets/Landing-Page/Step-2/Medium_white.png");
-$img8: url("../../img/Assets/Landing-Page/Step-2/Large_white.png");
-$img9: url("../../img/Assets/Landing-Page/Step-3/n_a_white.png");
-$img10: url("../../img/Assets/Landing-Page/Step-3/Standard_white.png");
-$img11: url("../../img/Assets/Landing-Page/Step-3/Social_white.png");
-$img12: url("../../img/Assets/Landing-Page/Step-3/Enterprise_white.png");
-$img13: url("../../img/Assets/Landing-Page/Step-4/n_a_white.png");
-$img14: url("../../img/Assets/Landing-Page/Step-4/data_white.png");
-$img15: url("../../img/Assets/Landing-Page/Step-4/Large-Files_white.png");
-$img16: url("../../img/Assets/Landing-Page/Step-5/no_white.png");
-$img17: url("../../img/Assets/Landing-Page/Step-5/simple_white.png");
-$img18: url("../../img/Assets/Landing-Page/Step-5/Advanced_white.png");
-$img19: url("../../img/Assets/Landing-Page/Step-6/no_white.png");
-$img20: url("../../img/Assets/Landing-Page/Step-6/simple_white.png");
-$img21: url("../../img/Assets/Landing-Page/Step-6/Advanced_white.png");
-$img22: url("../../img/Assets/Landing-Page/Step-7/no_white.png");
-$img23: url("../../img/Assets/Landing-Page/Step-7/simple_white.png");
-$img24: url("../../img/Assets/Landing-Page/Step-7/Advanced_white.png");
-$img25: url("../../img/Assets/Landing-Page/Step-8/n_a_white.png");
-$img26: url("../../img/Assets/Landing-Page/Step-8/Push_SMS_Email_white.png");
-$img27: url("../../img/Assets/Landing-Page/Step-8/Advanced_social_white.png");
-$img28: url("../../img/Assets/Landing-Page/Step-9/mvp_white.png");
-$img29: url("../../img/Assets/Landing-Page/Step-9/Polished_white.png");
-$img30: url("../../img/Assets/Landing-Page/Step-10/n_a_white.png");
-$img31: url("../../img/Assets/Landing-Page/Step-10/Complete_white.png");
-$img32: url("../../img/Assets/Landing-Page/Step-11/none_white.png");
-$img33: url("../../img/Assets/Landing-Page/Step-11/Minimal_white.png");
-$img34: url("../../img/Assets/Landing-Page/Step-11/Everything_white.png");
-$img35: url("../../img/Assets/Landing-Page/Step-12/not_important_white.png");
-$img36: url("../../img/Assets/Landing-Page/Step-12/important_white.png");
-$img37: url("../../img/Assets/Landing-Page/Step-13/not_important_white.png");
-$img38: url("../../img/Assets/Landing-Page/Step-13/important_white.png");
-$img39: url("../../img/Assets/Landing-Page/Step-14/No_major_backend_logic_white.png");
-$img40: url("../../img/Assets/Landing-Page/Step-14/with_ready_service_white.png");
-$img41: url("../../img/Assets/Landing-Page/Step-14/not_service_enabled_white.png");
-$img42: url("../../img/Assets/Landing-Page/Step-14/needs_to_be_created_white.png");
-$img43: url("../../img/Assets/Landing-Page/Step-15/Not_Required_white.png");
-$img44: url("../../img/Assets/Landing-Page/Step-15/Required_white.png");
-$padding-5-items: 0 10% 0 10%;
-$padding-4-items: 0 20% 0 20%;
-$padding-3-items: 0 25% 0 25%;
-$padding-2-items: 0 35% 0 35%;
 
 .top-header {
   background-color: #0c232c;
@@ -85,29 +37,48 @@ $padding-2-items: 0 35% 0 35%;
     font-size:  32px;
    } 
 }
+
+
 .progress-bar-container{
   width:100%;
   height:6em;
   background-color: #E6E6E6;
+  z-index:  5;
 }
-.tooltip{ 
-  position:relative;
-  float:right;
-}
-.tooltip > .tooltip-inner 
-{
-background-color: #0c232c; 
-padding:25px 25px; 
-color:#ffffff; 
-font-weight:bold; 
-font-size:13px;
+.tool{
+  position: relative;
+  float: left;
+  height: 24px;
+  width: 10%;
+  margin-top: -12px;
+  display:  none;
 }
 
-.popOver + .tooltip > .tooltip-arrow 
-{  
-border-left: 115px solid transparent; 
-border-right: 115px solid transparent; 
-border-top: 115px solid #0c232c;
+.tool:after {
+    background: #0c232c;
+    border-radius: .5em;
+    bottom: 1.5em;
+    color: #fff;
+    content: "$234567";
+    display: block;
+    left: -3.5em;
+    padding: .3em 1em;
+    position: absolute;
+    text-shadow: 0 1px 0 #000;
+    white-space: nowrap;
+    z-index: 98;
+}
+
+.tool:before {
+    border: solid;
+    border-color: #0c232c transparent;
+    border-width: .5em .5em 0 .6em;
+    bottom: 1em;
+    content: "";
+    display: block;
+    left: -1.0em;
+    position: absolute;
+    z-index: 99;
 }
 
 .section{
@@ -120,8 +91,9 @@ border-top: 115px solid #0c232c;
   background-color:  #dadada; 
   box-shadow: none !important;
 }
+
 .progress-bar{
-   background:#fa6023;
+  background:#fa6023;
   border-radius:10px;
   height:100%;
   -webkit-transition: width 1s ease-in-out;
@@ -143,6 +115,14 @@ border-top: 115px solid #0c232c;
    font-weight: regular;
    text-align: center;
    font-family: Lato;
+}
+.progress-1{
+  overflow:visible;
+  height:12px;
+  margin-top: -2%;
+  background-color:  #dadada; 
+  box-shadow: none !important;
+  border-radius:  10px;
 }
 
 @mixin rhombus($imgurl)
