--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -50,7 +50,21 @@ $padding-5-items: 0 10% 0 10%;
 $padding-4-items: 0 20% 0 20%;
 $padding-3-items: 0 25% 0 25%;
 $padding-2-items: 0 35% 0 35%;
-
+$background-color-step-1:  #e34c6c;
+$background-color-step-2:  #ab47bc;
+$background-color-step-3:  #7e57c2;
+$background-color-step-4:  #5c6bc0;
+$background-color-step-5:  #4ba5de;
+$background-color-step-6:  #26c6da;
+$background-color-step-7:  #26a69a;
+$background-color-step-8:  #ab47bc;
+$background-color-step-9:  #ab47bc;
+$background-color-step-10:  #ab47bc;
+$background-color-step-11:  #ab47bc;
+$background-color-step-12:  #ab47bc;
+$background-color-step-13:  #ab47bc;
+$background-color-step-14:  #ab47bc;
+$background-color-step-15:  #ab47bc;
 
 
 //== Colors
