--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -57,13 +57,13 @@ $background-color-step-4:  #5c6bc0;
 $background-color-step-5:  #4ba5de;
 $background-color-step-6:  #26c6da;
 $background-color-step-7:  #26a69a;
-$background-color-step-8:  #ab47bc;
+$background-color-step-8:  #66bb6a;
 $background-color-step-9:  #ab47bc;
 $background-color-step-10:  #ab47bc;
 $background-color-step-11:  #ab47bc;
 $background-color-step-12:  #ab47bc;
 $background-color-step-13:  #ab47bc;
-$background-color-step-14:  #ab47bc;
+$background-color-step-14:  #ef5350;
 $background-color-step-15:  #ab47bc;
 
 
