--- a/src/styles/_estimator.scss
+++ b/src/styles/_estimator.scss
@@ -85,8 +85,17 @@
 @mixin background($background-color)
 {
   background-color: $background-color;
-  height: 500px;
+  height: 550px;
   padding-top:  6%;
+}
+
+@mixin prev-next-text(){
+    bottom: -86px;
+    color: #ffffff;
+    position: relative;
+    font-family: Lato;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 #step-1{
@@ -127,6 +136,7 @@
 
 .theme-five{
   /*@include padding($padding-5-items);  */
+  height: 200px;
    .div1{
    @include rhombus();
    }
@@ -146,7 +156,8 @@
 
 .theme-four{
    /*@include padding($padding-4-items);*/
-   
+   height: 200px;
+
    .div9{
       @include rhombus();
    }
@@ -177,6 +188,8 @@
 
 .theme-three{
    /*@include padding($padding-3-items);*/
+   height: 200px;
+
    .div6{
       @include rhombus();
    }
@@ -244,6 +257,8 @@
 
 .theme-two{
    /*@include padding($padding-2-items);*/
+   height: 200px;
+
    .div28{
       @include rhombus();
    }
@@ -328,23 +343,44 @@ span.orange{
 .triangle-up {
    
     height: 0;    
-    padding-left:10%;
-    padding-bottom: 10%;
-    overflow: hidden;  
+    padding-left: 16%;
+    padding-bottom: 120px;
+    overflow: hidden;
+    opacity: 0.2;
+
+    span{
+    color: #ffffff; 
+    position: relative;
+    font-family:  Lato;
+    font-size: 26px;
+    font-weight: bold;
+    top: 64px;
+    left: -34px;
+    }  
 }
+
+.prev-text{
+  @include prev-next-text();  
+}
+.next-text{
+  @include prev-next-text();
+  padding-left: 27%;
+}
+
 .triangle-up:after {
     content: "";
     display: block;
     width: 0;
     height: 0;
-    margin-left:-500px;
-    border-left: 500px solid transparent;
-    border-right: 500px solid transparent;
-    border-bottom: 500px solid #4679BD;
+    margin-left:-900px;
+    border-left: 900px solid transparent;
+    border-right: 900px solid transparent;
+    border-bottom: 500px solid #000000;
+    /*opacity: 0.2;*/
 }
 .progress-bar-container{
   width:100%;
-  height:6em;
+  height:100px;
   background-color: #fff;
   z-index:  5;
 }
